# pickme

./: Cargo.toml  pickme.toml
src/: cli.rs  main.rs
src/gui/: iced.rs
