[package]
name = "pickme"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cli-clipboard = "0.4.0"
device_query = "1.1.1"
hex = "0.4.3"
image = "0.24.5"
rgb = "0.8.34"
screenshots = "0.4.6"
winapi = { version = "0.3.9", features = ["shellscalingapi"] }
termcolor = { version = "1.2.0", optional = true }
iced = { version = "0.7.0", optional = true }
iced_native = { version = "0.8.0", optional = true }
clap = "4.1.1"
toml = "0.5.11"
serde = { version = "1.0.152", features = ["derive"] }

[features]
default = ["cli"]
cli = ["termcolor"]
iced = ["dep:iced", "iced_native"]
